fixed on mobile

--- a/index.css
+++ b/index.css
@@ -53,8 +53,7 @@ li {
 }
 
 .container {
-    width: 1140px;
-    max-width: 100%;
+    max-width: 1140px;
     position: relative;
     margin-left: auto;
     margin-right: auto;
